Make changes to receiver and storage
